--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,7 @@ jobs:
     - uses: actions/setup-python@v4
       with:
         python-version: '3.7'
+        check-latest: true
     - name: Setup databases
       run: |
         pip install .
